default website creation at setup time is complete.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @{
-    Layout = Constants.SiteLayoutName;
+    Layout = Constants.AdminLayoutName;
 }
 
 <h1> Holaaaaaaaaa </h1>
