--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @{
-    Layout = Constants.AdminLayoutName;
+    Layout = Constants.SiteLayoutName;
 }
 
 <h1> Page List </h1>
