--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/CreateAdmin.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/CreateAdmin.cshtml
@@ -114,11 +114,11 @@
                     <select asp-for="SetupTemplate" type="text" class="form-control" id="SetupTemplate" name="SetupTemplate">
                         <option value="">Select your template</option>
                         <option value="Basic">Basic</option>
-                        <option value="Blog">Blog</option>
+                        @*<option value="Blog">Blog</option>
                         <option value="PersonalProfile">Personal Profile</option>
                         <option value="CompanyWebsite">Company Website</option>
                         <option value="CRM">CRM</option>
-                        <option value="EcommarceSite">Ecommarce Site</option>
+                        <option value="EcommarceSite">Ecommarce Site</option>*@
                     </select>
                     <span asp-validation-for="SetupTemplate" class="text-danger"></span>
                 </div>
