--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
@@ -72,10 +72,10 @@
                     <select asp-for="Database" type="text" class="form-control" id="Database" name="Database">
                         <option value="">Select your database engine</option>
                         <option value="SqLite">SQLite</option>
-                        <option value="MsSqlLocalStorage">MsSqlLocalStorage</option>
+                        @*<option value="MsSqlLocalStorage">MsSqlLocalStorage</option>
                         <option value="MsSql">MsSql</option>
                         <option value="MySql">MySql</option>
-                        <option value="PgSql">PgSql</option>
+                        <option value="PgSql">PgSql</option>*@
                     </select>
                     <span asp-validation-for="Database" class="text-danger"></span>
                 </div>
