--- a/NetCoreCMS.Web/Themes/Site/Default/Shared/_SiteLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Themes/Site/Default/Shared/_SiteLoginPartial.cshtml
@@ -12,6 +12,7 @@
         {
             <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                     <li>
                         <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
                     </li>
@@ -24,7 +25,7 @@
         else
         {
             <ul class="nav navbar-nav navbar-right">
-                <li><a asp-area="" asp-controller="Home" asp-action="Index">Settings</a></li>
+                <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                 <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
                 <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
             </ul>
