--- a/NetCoreCMS.Web/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using NetCoreCMS.Web.Models.AccountViewModels
 @using NetCoreCMS.Web.Models.ManageViewModels
 @using NetCoreCMS.Framework.Core
+@using NetCoreCMS.Framework.Utility
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
