--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Settings/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Settings/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using NetCoreCMS.Core.Modules.Settings.Models
+@using NetCoreCMS.Framework.Core.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
