--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/HelloHome/Index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/HelloHome/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @{
-    Layout = Constants.AdminLayoutName;
+    Layout = Constants.SiteLayoutName;
 }
 
-<h1> Holaaaaaaaaa !!! It's Backend</h1>
+<h1> Holaaaaaaaaa !!! It's a sample module</h1>
 
 <hr/>
