--- a/NetCoreCMS.Web/Views/Account/Login.cshtml
+++ b/NetCoreCMS.Web/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NetCoreCMS.Framework.Core.Models
+@using NetCoreCMS.Framework.Utility
 @using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
