Moved account related functionalities into CMS module.

--- a/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
@@ -1,8 +1,4 @@
-﻿@using NetCoreCMS.Web
-@using NetCoreCMS.Web.Models
-@using NetCoreCMS.Web.Models.AccountViewModels
-@using NetCoreCMS.Web.Models.ManageViewModels
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Framework.Utility
 
 @inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
