--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using NetCoreCMS.Core.Modules.Cms
 @using NetCoreCMS.Core.Modules.Cms.Models
+@using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
+@using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
