--- a/NetCoreCMS.Web/Themes/Admin/Default/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using NetCoreCMS.Web
-@using NetCoreCMS.Web.Models
-@using NetCoreCMS.Web.Models.AccountViewModels
-@using NetCoreCMS.Web.Models.ManageViewModels
+﻿@using NetCoreCMS.Core.Modules.Cms
+@using NetCoreCMS.Core.Modules.Cms.Models
+@using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
+@using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
