--- a/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
@@ -1,9 +1,4 @@
-﻿@using NetCoreCMS.Web
-@using NetCoreCMS.Web.Models
-@using NetCoreCMS.Web.Models.AccountViewModels
-@using NetCoreCMS.Web.Models.ManageViewModels
-
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
