--- a/NetCoreCMS.Web/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Views/_ViewImports.cshtml
@@ -1,8 +1,4 @@
-﻿@using NetCoreCMS.Web
-@using NetCoreCMS.Web.Models
-@using NetCoreCMS.Web.Models.AccountViewModels
-@using NetCoreCMS.Web.Models.ManageViewModels
-@using NetCoreCMS.Framework.Core
+﻿@using NetCoreCMS.Framework.Core
 @using NetCoreCMS.Framework.Utility
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
