--- a/NetCoreCMS.Web/Views/Shared/_SettingsLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLoginPartial.cshtml
@@ -26,7 +26,7 @@
         {
             <ul class="nav navbar-nav navbar-right">
                 <li><a asp-area="" asp-controller="CmsHome" asp-action="Index" target="_blank">Website</a></li>
-                <li><a asp-area="" asp-controller="Admin" asp-action="Index">Settings</a></li>
+                <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                 <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
                 <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
             </ul>
