All CMS models are created.

--- a/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLayout.cshtml
@@ -82,11 +82,11 @@
                         <li class="active"><a asp-controller="Settings" asp-action="Index">Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
                         
                         <li class="dropdown open">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Appearance<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                             <ul class="dropdown-menu forAnimate" role="menu">
-                                <li><a href="#">Create</a></li>
-                                <li><a href="#">Assign</a></li>
-                                <li><a href="#">Manage</a></li>
+                                <li><a href="#">Menu</a></li>
+                                <li><a href="#">Widget</a></li>
+                                <li><a href="#">Theme</a></li>                                
                             </ul>
                         </li>
 
@@ -101,7 +101,7 @@
                         <li class="dropdown open">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Theme<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                             <ul class="dropdown-menu forAnimate" role="menu">
-                                <li><a href="#">Install</a></li>
+                                <li><a href="#">New Theme</a></li>
                                 <li><a href="#">Manage</a></li>                                
                             </ul>
                         </li>
@@ -109,7 +109,7 @@
                         <li class="dropdown open">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Modules<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                             <ul class="dropdown-menu forAnimate" role="menu">                                
-                                <li><a href="#">Install</a></li>
+                                <li><a href="#">New Module</a></li>
                                 <li><a href="#">Manage</a></li>
                             </ul>
                         </li>
