Working on menu

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/ManageAccount/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/ManageAccount/Index.cshtml
@@ -14,17 +14,17 @@
         <dd>
             @if (Model.HasPassword)
             {
-                <a asp-controller="Manage" asp-action="ChangePassword" class="btn-bracketed">Change</a>
+                <a asp-controller="ManageAccount" asp-action="ChangePassword" class="btn-bracketed">Change</a>
             }
             else
             {
-                <a asp-controller="Manage" asp-action="SetPassword" class="btn-bracketed">Create</a>
+                <a asp-controller="ManageAccount" asp-action="SetPassword" class="btn-bracketed">Create</a>
             }
         </dd>
         <dt>External Logins:</dt>
         <dd>
 
-            @Model.Logins.Count <a asp-controller="Manage" asp-action="ManageLogins" class="btn-bracketed">Manage</a>
+            @Model.Logins.Count <a asp-controller="ManageAccount" asp-action="ManageLogins" class="btn-bracketed">Manage</a>
         </dd>
         <dt>Phone Number:</dt>
         <dd>
@@ -56,13 +56,13 @@
             </p>
             @*@if (Model.TwoFactor)
                 {
-                    <form asp-controller="Manage" asp-action="DisableTwoFactorAuthentication" method="post" class="form-horizontal">
+                    <form asp-controller="ManageAccount" asp-action="DisableTwoFactorAuthentication" method="post" class="form-horizontal">
                         Enabled <button type="submit" class="btn-link btn-bracketed">Disable</button>
                     </form>
                 }
                 else
                 {
-                    <form asp-controller="Manage" asp-action="EnableTwoFactorAuthentication" method="post" class="form-horizontal">
+                    <form asp-controller="ManageAccount" asp-action="EnableTwoFactorAuthentication" method="post" class="form-horizontal">
                         <button type="submit" class="btn-link btn-bracketed">Enable</button> Disabled
                     </form>
                 }*@
