--- a/NetCoreCMS.Web/Views/Shared/_SettingsLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SettingsLoginPartial.cshtml
@@ -14,7 +14,7 @@
                     <li><a asp-area="" asp-controller="CmsHome" asp-action="Index" target="_blank">Website</a></li>
                     <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                     <li>
-                        <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                        <a asp-area="" asp-controller="ManageAccount" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
                     </li>
                     <li>
                         <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
